# testsummonpr

./: .travis.yml  CHANGELOG.md  README.md  testsummonpr.cabal
app/: Main.hs
src/: Testsummonpr.hs
