cabal-version:       1.24
name:                testsummonpr
version:             0.0.0
description:         test for summon PR
synopsis:            test for summon PR
homepage:            https://github.com/pascalpoizat/testsummonpr
bug-reports:         https://github.com/pascalpoizat/testsummonpr/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Pascal Poizat
maintainer:          pascal.poizat@gmail.com
copyright:           2018 Pascal Poizat
category:            Testing
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.3

source-repository head
  type:                git
  location:            https://github.com/pascalpoizat/testsummonpr.git

library
  hs-source-dirs:      src
  exposed-modules:     Testsummonpr
                       Prelude
  ghc-options:         -Wall
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       base-noprelude
                     , relude
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

executable testsummonpr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       base-noprelude
                     , testsummonpr
                     , relude
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

test-suite testsummonpr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       base-noprelude
                     , testsummonpr
                     , relude
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

benchmark testsummonpr-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       base-noprelude
                     , gauge
                     , testsummonpr
                     , relude
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

